update some ui wording functions...